...

    Column(
        modifier = modifier
            .fillMaxSize()
            .background(MaterialTheme.colorScheme.surface)
            .padding(vertical = AddOrEditScreenColumnVerticalPadding)
            .testTag("AddOrEditScreen"),
        horizontalAlignment = Alignment.Start,
        verticalArrangement = Arrangement.spacedBy(AddOrEditScreenColumnVerticalPadding)
    ) {
        Icon(
            painter = painterResource(id = AppIcons.BackIcon),
            contentDescription = AppIcons.BackIcon.toString(),
...
                    interactionSource = remember { MutableInteractionSource() },
                    indication = rememberRipple(bounded = true),
                    onClick = {
                        addNoteEvent()
                    }
                )
                .testTag("BackButton"),
            tint = MaterialTheme.colorScheme.onPrimaryContainer,
        )

        com.example.components.TextField(
            value = addOrEditModel.title,
            modifier = Modifier
...
