...

@Composable
fun NotesList(
    note: List<Note>,
    onDeleteNoteClick: (Note) -> Unit,
) {
    List(
        note = note,
        onDeleteNoteClick = onDeleteNoteClick
    )
}

@SuppressLint("StateFlowValueCalledInComposition")
...
